# florian

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.MD  README.md  docker-compose.yml  example.py  pyproject.toml
.claude/: settings.json
.claude/commands/: builtin.md  commit.md  git.md
assets/: POETRY.md
florian/: __init__.py  cli.py
florian/gmail/: auth.py  client.py
florian/opensearch/: client.py
fuse-asg/src/main/java/com/yangdb/fuse/asg/translator/cypher/strategies/expressions/: BaseEqualityExpression.java
src/florian/: cli.py  embeddings.py
src/florian/gmail/: __init__.py  auth.py  client.py
src/florian/opensearch/: __init__.py  client.py
src/kuzu/: schema.cypher
src/yang-db/fuse-asg/src/main/java/com/yangdb/fuse/asg/translator/cypher/strategies/expressions/: BaseExpressionStrategy.java
src/yang-db/fuse-dv/fuse-dv-unipop/src/main/java/com/yangdb/fuse/unipop/controller/common/converter/: ElementConverter.java
src/yang-db/fuse-model/src/main/java/com/yangdb/fuse/model/execution/plan/entity/: EntityOp.java
